--- a/my_exercise_form.html
+++ b/my_exercise_form.html
@@ -2,28 +2,31 @@
 <html lang="en">
 
 <head>
+    <meta charset="UTF-8">
+    <title>Document</title>
 </head>
 
 <body>
-    <h2>A simple form</h2>
-    <h3>From fudamentals</h3>
-    <form action="/contact" method="POST">
-        <div>
+
+    <body>
+        <h2>A simple form</h2>
+        <h3>From fudamentals</h3>
+        <form action="/contact" method="POST">
             <fieldset>
                 <legend>Customer info</legend>
                 <div>
-                    <label>Name
-                        <input type="text" name="name" autofocus="" placeholder=" Your name and surname" required="true" autofocus="true">
+                    <label for="user_name">Name
+                        <input id="user_name" type="text" name="name" placeholder=" Your name and surname" required="true" autofocus="true">
                     </label>
                 </div>
                 <div>
-                    <label> Telephone
-                        <input type="text" name="Telephone" pattern="1-1234-567-8910" placeholder="1-1234-567-8910" required="true">
+                    <label for="Telephone"> Telephone
+                        <input id="Telephone" type="text" name="Telephone" pattern="/\d{1}-\d{3}-\d{3}-\d{4}" placeholder="1-1234-567-8910" required="true">
                     </label>
                 </div>
                 <div>
-                    <label> E-mail adfress
-                        <input type="text" name="upassword" placeholder=" sample@sample.com" required="true">
+                    <label for="email"> E-mail adress
+                        <input id="email" type="text" name="email adress" placeholder=" sample@sample.com" required="true">
                     </label>
                 </div>
             </fieldset>
@@ -31,21 +34,34 @@
                 <legend>Books</legend>
                 <div>
                     <select>
-                        <label>
-                            <option value="Language" selected>Language</option>
-                            <option value="Science">Science</option>
-                            <option value="History">History</option>
+                        <label form="" ="books">
+                            <datalist id="books">
+                                <option value="Language" selected="true	">Language</option>
+                                <option value="Science">Science</option>
+                                <option value="History">History</option>
+                                <option> #1. The Great Gatsby. by F. Scott Fitzgerald. ...</option>
+                                <option> #2. The Grapes of Wrath. by John Steinbeck. (30 Reviews) ...</option>
+                                <option> #3. by George Orwell. (64 Reviews) 946 Points. ...</option>
+                                <option> #4. Ulysses. by James Joyce. (10 Reviews) ...</option>
+                                <option> #5. Lolita. by Vladimir Nabokov. ...</option>
+                                <option> #6. Catch-22. by Joseph Heller. ...</option>
+                                <option> #7. The Catcher in the Rye. by J. D. Salinger. ...</option>
+                                <option> #8. Beloved. by Toni Morrison.</option>
+                            </datalist>
                     </select>
                     </label>
-                    <label> "Quantity (Maximum 5):"
-                        <input type="number" name="upassword" max="5" min="1" multiple="true">
+                    <label for="Quantity"> Quantity (Maximum 5):
+                        <input type="number" name="Quantity" max="5" min="1" multiple="true">
                     </label>
                 </div>
+
             </fieldset>
-        </div>
-        <input type="submit" value="Submit">
-        </div>
-    </form>
+            </div>
+            <input type="submit" value="Submit">
+        </form>
+    </body>
+
+</html>
 </body>
 
 </html>
